longhorn/longhorn-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: longhorn-system
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: "letsencrypt"
      #nginx.ingress.kubernetes.io/auth-url: "https://oauth.platform.labs.ahinh.me/oauth2/auth"
      #    nginx.ingress.kubernetes.io/auth-signin: "https://oauth.platform.labs.ahinh.me/oauth2/start?rd=$scheme://$best_http_host$request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: "x-auth-request-user, x-auth-request-email, x-auth-request-access-token"
spec:
  tls:
    - hosts:
        - longhorn.platform.labs.ahinh.me
      secretName: longhorn-cert-tls
  ingressClassName: nginx
  rules:
    - host: longhorn.platform.labs.ahinh.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
